--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@portabletext/react": "^2.0.0",
 		"@sanity/client": "^3.0.0",
 		"@sanity/image-url": "^1.0.1",
+		"@sanity/types": "^3.1.4",
 		"@types/node": "18.11.18",
 		"@types/react": "18.0.26",
 		"@types/react-dom": "18.0.10",
